<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pebble Endomondo</string>

    <string name="install_title">Install watchapp from Pebble Store</string>
    <string name="start_title">Start watchapp</string>
    <string name="toast_start">Watchapp are started!</string>
    <string name="toast_no_conn">Pebble is not connected!</string>
    <string name="dialog_title">Service is not running</string>
    <string name="dialog_message_accessibility">Accesibility service is not running. You must enable it to get this app to work!</string>
    <string name="dialog_message_notification">Notification service is not running. You must enable it to get this app to work!</string>
    <string name="dialog_positive">Open Settings</string>
    <string name="dialog_negative">Cancel</string>

    <string name="autostart_title">Auto start</string>
    <string name="autostart_summary">Start app on Pebble at first Endomondo statusbar notification</string>
    <string name="forcestart_title">Force start</string>
    <string name="forcestart_summary">Force start app on Pebble while another app occupies Pebble screen</string>
    <string name="forcestart_delay_title">Force start delay</string>

    <string-array name="forcestart_delay">
        <item name="5000">5 seconds</item>
        <item name="10000">10 seconds</item>
        <item name="20000">20 seconds</item>
        <item name="30000">30 seconds</item>
    </string-array>
    <string-array name="forcestart_delay_values">
        <item name="5000">5000</item>
        <item name="10000">10000</item>
        <item name="20000">20000</item>
        <item name="30000">30000</item>
    </string-array>

    <string name="service_description">Pebble Endomondo\'s accessibility service is required to capture status of
        Endomondo workout from statusbar.</string>

    <string name="note"> NOTE: Watchapp is working only if Endomondo app is running in background or phone is locked.</string>
    <string name="category_1">Settings</string>
    <string name="category_2">Requirements</string>

    <!-- parser hack -->
    <string name="no_notification_text">": Endomondo\n\n: on sreen\n\n: or has been\n\n: closed "</string>
</resources>
